--- a/sass/actors/_stat-containers.scss
+++ b/sass/actors/_stat-containers.scss
@@ -17,14 +17,6 @@
   width: 100%;
 }
 
-.essence20 .stats-container {
-  display: grid;
-  align-content: left;
-  justify-content: space-around;
-  justify-items: center;
-  margin-bottom: auto;
-}
-
 /*-- NPC --*/
 .essence20 .npc-stats-container {
   background: v.$background-b;
