--- a/sass/assets/_common-container.scss
+++ b/sass/assets/_common-container.scss
@@ -1,23 +1,3 @@
-.essence20 .common-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 5px;
-  grid-template-areas:
-    "common-container-1 common-container-2 common-container-3";
-}
-
-.essence20 .common-container-1 {
-  grid-area: common-container-1;
-}
-
-.essence20 .common-container-2 {
-  grid-area: common-container-2;
-}
-
-.essence20 .common-container-3 {
-  grid-area: common-container-3;
-}
-
 .essence20 .common-label-1 {
   font-size: 2em;
   /* margin-top: 70px;*/
